# abogen

./: .env.example  .gitignore  CHANGELOG.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  WINDOWS_INSTALL.bat  docker-compose.gpu.yml  docker-compose.webui.yml  docker-compose.yaml  pyproject.toml  test_performance.py
.github/workflows/: test_pip.yml  test_publish.yml
abogen/: Dockerfile  TODO.md  __init__.py  book_handler.py  book_parser.py  chunking.py  constants.py  conversion.py  debug_tts_samples.py  entity_analysis.py  gui.py  heteronym_overrides.py  is_nvidia.py  kokoro_text_normalization.py  llm_client.py  main.py  normalization_settings.py  predownload_gui.py  pronunciation_store.py  queue_manager_gui.py  queued_item.py  spacy_contraction_resolver.py  spacy_utils.py  speaker_analysis.py  speaker_configs.py  subtitle_utils.py  text_extractor.py  tts_supertonic.py  utils.py  voice_cache.py  voice_formula_gui.py  voice_formulas.py  voice_profiles.py
abogen/epub3/: exporter.py
abogen/integrations/: audiobookshelf.py  calibre_opds.py
abogen/pyqt/: gui.py
abogen/resources/: docopt-0.6.2-py2.py3-none-any.whl  progress-1.6-py3-none-any.whl
abogen/web/: app.py  conversion_runner.py  debug_tts_runner.py  routes.py  service.py
abogen/web/routes/: api.py  books.py  entities.py  (+4 more)
abogen/webui/: Dockerfile  app.py  debug_tts_runner.py
demo/: README.md  convert.py  demo.ass  demo.srt  demo.webm
docs/: entities_step_overhaul_plan.md  epub3_upgrade_plan.md
tests/: __init__.py  conftest.py  test_audiobookshelf_client.py  test_book_handler_regression.py  test_book_parser.py  test_book_step_speaker_provider.py  test_calibre_opds.py  test_chapter_overrides.py  test_chunk_helpers.py  test_chunk_text_for_tts_prefers_raw.py  test_conversion_chapter_titles.py  test_conversion_series.py  test_conversion_voice_resolution.py  test_date_normalization_comprehensive.py  test_debug_tts_samples.py  test_epub_content_slicing.py  test_epub_exporter.py  test_epub_heuristic_nav.py  test_epub_html_nav_parsing.py  test_epub_missing_file_error_handling.py  test_epub_ncx_parsing.py  test_epub_standard_nav.py  test_ffmetadata.py  test_manual_overrides_applied_first.py  test_opds_import_metadata_mapping.py  test_output_paths.py  test_prepare_form.py  test_preview_applies_manual_overrides.py  test_regression_fixes.py  test_service.py  test_settings_integrations_secrets.py  test_speaker_analysis.py  test_text_extractor.py  test_text_normalization.py  test_tts_supertonic_unsupported_chars.py  test_utils_cache.py  test_voice_cache.py  test_voice_formula_resolution.py
tests/fixtures/: abogen_debug_tts_samples.epub
(+51 files in other folders)
